--- a/src/styles/ui/Sidebar.module.css
+++ b/src/styles/ui/Sidebar.module.css
@@ -3,14 +3,5 @@
 }
 
 .content {
-  transition: 
-    opacity 0.1s 0.3s,
-    display 0.3s;
-}
-
-@starting-style {
-  .content {
-    opacity: 0;
-    display: none;
-  }
+  transition: opacity 0.2s 0.3s,
 }
